--- a/vorstellung.tex
+++ b/vorstellung.tex
@@ -230,89 +230,107 @@ else
 
 \begin{frame}{Vom Sequence Pair zum Packing}
 \begin{definition}[Common Subsequence]
- Seien $X= (x_1,\dots,x_n)$ und $Y=(y_1,\dots, y_m)$. Eine common subsequence von $X$ und $Y$ ist eine Folge $Z=(z_1,\dots, z_k)$, sodass es Indices $i_1<\dots< i_k$ und $j_1 <\dots < j_k$ gibt mit
+ Seien $X= (x_1,\dots,x_n)$ und $Y=(y_1,\dots, y_m)$. Eine Common Subsequence von $X$ und $Y$ ist eine Folge $Z=(z_1,\dots, z_k)$, sodass es Indices $i_1<\dots< i_k$ und $j_1 <\dots < j_k$ gibt mit
  \begin{align*}
   z_h = x_{i_h} = y_{j_h} ~\forall 1\leq h\leq k\;.
  \end{align*}
 \end{definition}
 \begin{definition}[Longest Common Subsequence]
- Sei zu den beiden Folgen $X$ und $Y$ noch eine Gewichtsfunktion $\omega: X\cup Y \to \mathbb{R}$ gegeben. Dann definieren wir die longest common subsequence $\lcs(X,Y)$ als eine subsequence $Z$, sodass 
+ Sei zu den beiden Folgen $X$ und $Y$ noch eine Gewichtsfunktion $\omega: X\cup Y \to \mathbb{R}$ gegeben. Dann definieren wir die Longest Common Subsequence $\lcs(X,Y)$ als eine subsequence $Z$, sodass 
  \begin{align*}
   \omega(Z) = \sum_{z\in Z} \omega(z)
  \end{align*}
- maximal ist unter allen common subsequences von $X$ und $Y$.
+ maximal ist unter allen Common Subsequences von $X$ und $Y$.
 \end{definition}
 \end{frame}
 
 \begin{frame}{Vom Sequence Pair zum Packing}
- Aus einem Sequencepair $(X,Y)$ lassen sich so die Dimensionen eines optimalen Packings ablesen:
+ Aus einem Sequence Pair $(X,Y)$ lassen sich so die Dimensionen eines optimalen Packings ablesen:
  \begin{itemize}
    \item Die Breite des Packings ist $\lcs(X,Y)$, wenn man die Folgenglieder mit der Breite des jeweiligen Rechtecks gewichtet.
    \item Die Höhe des Packings ist $\lcs(X\rev, Y)$. wenn man die Folgenglieder mit der Höhe des jeweiligen Rechtecks gewichtet.
  \end{itemize}
  
- Es lässt sich auch eine optimale Position der Rechtecke berechnen. Sei $b$ ein Rechteck, es gelte $X= X_1 b X_2$ und $Y= Y_1 b Y_2$. Dann ist
+ Es lässt sich auch eine optimale Position der Rechtecke berechnen. Sei $b$ ein Rechteck, es gelte $X= X_1 b X_2$ und $Y= Y_1 b Y_2$. Dann ist relativ zum rechten Rand:
  \begin{itemize}
    \item die $x$-Position von $b$ gleich $\lcs(X_1,Y_1)$.
    \item die $y$-Position von $b$ gleich $\lcs(X_2\rev, Y_1)$.
  \end{itemize}
-
-
 \end{frame}
+
+
+\begin{frame}{Vom Sequence Pair zum Packing}
+\begin{algorithm}[H]
+	\SetAlgoLined
+	\KwData{Die Liste der zu packenden Rechtecke, ein Sequence Pair $(X,Y)$}
+	\KwResult{Eine optimale Positionierung der Rechtecke in $x$-Richtung relativ zum rechten Rand}
+	\ForEach{Rectangle $b$ in $X$}{
+		x\_pos[$b$] = length[$b$]\;
+		x\_end = x\_pos[$b$] + $\breite(b)$\;
+		\ForEach{Rectangle $c$ in $Y$ after $b$}
+		{
+			\If{x\_end $>$ length[$c$]}{
+				length[$c$] = x\_end\;
+			}
+		}
+	}
+\end{algorithm}
+
+Laufzeit: $\mathcal{O}(n^2)$
+\end{frame}
+
 \begin{frame}{Vom Sequence Pair zum Packing}
 \begin{figure}
   \centering
   \begin{align*}
-  \Gamma^+ &= ({\color{blue!40!white} {\color<8>{blue} 5}}, {\color{green!40!white} {\color<5->{green}4}}, {\color{orange!40!white} 3} ,{\color{red!40!white} {\color<3,7>{red}2}} ,{\color{purple!40!white} {\color<2-5,8>{purple}1}})\\
-  \Gamma^-&=  ({\color{orange!40!white} 3} ,{\color{red!40!white} {\color<3,7>{red}2}}, {\color{blue!40!white} {\color<8>{blue} 5}}, {\color{green!40!white} {\color<5->{green}4}} ,{\color{purple!40!white} {\color<2-5,8>{purple}1}})
+  X &= ({\color{blue!40!white} {\color<1-3>{blue} 5}}, {\color{green!40!white} {\color<4-5>{green}4}}, {\color{orange!40!white} {\color<6-10>{orange}3}} ,{\color{red!40!white} 2} ,{\color{purple!40!white} 1})\\
+  Y &=  ({\color{orange!40!white} 3} ,{\color{red!40!white} {\color<7>{red}2}}, {\color{blue!40!white} \color<8>{blue}5}, {\color{green!40!white} {\color<2,9>{green}4}} ,{\color{purple!40!white} {\color<3,5,10>{purple}1}})
   \end{align*}
   \begin{tikzpicture}
-  \filldraw[purple,fill=purple!15!white] (0,0) rectangle node{1} +(2,3) ;
-  \filldraw[red,fill=red!15!white] (2,2) rectangle node{2} +(2,2);
-  \filldraw[orange,fill=orange!15!white] (4,3) rectangle node{3} +(1,1);
-  \filldraw[green,fill=green!15!white] (2,-1) rectangle node{4} +(1,2);
-  \filldraw[blue,fill=blue!15!white] (3,-0.5) rectangle node{5} +(3,2);
-  
-  \fill[purple, visible on=<2-5>] (0,0) rectangle node{1} +(2,3) ;
-  \fill[purple, visible on=<8>] (0,0) rectangle node{1} +(2,3) ;
-  \fill[red,visible on=<3>] (2,2) rectangle node{2} +(2,2);
-  \fill[red,visible on=<7>] (2,2) rectangle node{2} +(2,2);
-  \fill[green,visible on=<5->] (2,-1) rectangle node{4} +(1,2);
-  \fill[blue,visible on=<8>] (3,-0.5) rectangle node{5} +(3,2);
+  \filldraw[blue,fill=blue!15!white] (3,0) rectangle node{5} +(3,2);
+  \filldraw[green,fill=green!15!white, visible on = <2->] (2,0) rectangle node{4} +(1,1);
+  \filldraw[purple,fill=purple!15!white, visible on = <3-4>] (1,1) rectangle node{1} +(2,2) ;  
+  \filldraw[purple,fill=purple!15!white, visible on = <5->] (0,0) rectangle node{1} +(2,2) ;  
+  \filldraw[orange,fill=orange!15!white, visible on = <6->] (5,2) rectangle node{3} +(1,2);
+  \filldraw[red,fill=red!15!white, visible on = <7->] (3,2) rectangle node{2} +(2,1);
+
   \end{tikzpicture}
 \end{figure}
 
 \end{frame}
 
 \begin{frame}{Vom Sequence Pair zum Packing}
- \begin{algorithm}[H]
-\SetAlgoLined
-\KwData{Die Liste der zu packenden Rechtecke, ein Sequence Pair $(X,Y)$}
-\KwResult{Eine optimale Positionierung der Rechtecke in $x$-Richtung}
-\ForEach{Rechteck $b$ in $X$}{
-xPos[$b$] = length[$b$]\;
-xEnd = xPos[$b$] + $\breite(b)$\;
-\ForEach{Rechteck $c$ in $Y$ nach $b$}
-{
-\If{xEnd $>$ length[$c$]}{
-length[$c$] = xEnd\;
-}
-}
-}
+\begin{algorithm}[H]
+	\SetAlgoLined
+	\KwData{Die Liste der zu packenden Rechtecke, ein Sequence Pair $(X,Y)$}
+	\KwResult{Eine optimale Positionierung der Rechtecke in $x$-Richtung relativ zum rechten Rand}
+	\ForEach{Rectangle $b$ in $X$}{
+		x\_pos[$b$] = length[$b$]\;
+		x\_end = x\_pos[$b$] + $\breite(b)$\;
+		\ForEach{Rectangle $c$ in $Y$ after $b$}
+		{
+			\If{x\_end $>$ length[$c$]}{
+				length[$c$] = x\_end\;
+			}
+		}
+	}
 \end{algorithm}
+
+Laufzeit: $\mathcal{O}(n^2)$
 \end{frame}
 
 \begin{frame}[fragile]{Vom Sequence Pair zum Packing}
  \begin{lstlisting}[basicstyle=\scriptsize]
-size_t y_index = y_indexes[pack_index];
 //We insert with length 0 to optimize the greatest index less than search
 //0 is the node for no seq found so we treat the indices one-based in the context of cur_seqs
-const auto cur_node = cur_seqs.insert({ y_index + 1, 0 }).first;
+auto cur_node = cur_seqs.insert({ y_index + 1, 0 }).first;
 positions[pack_index] = std::prev(cur_node)->second;
-pos cur_seq_length = positions[pack_index] + pack.get_rect((int)pack_index).get_dimension(dim);
+pos cur_seq_length = positions[pack_index] +
+    pack.get_rect(pack_index).get_dimension(dim);
 cur_seqs[y_index + 1] = cur_seq_length;
 //We go forward until we no longer need to delete nodes
-while (std::next(cur_node) != cur_seqs.end() && std::next(cur_node)->second < cur_seq_length)
+while (std::next(cur_node) != cur_seqs.end() && 
+    std::next(cur_node)->second < cur_seq_length)
 {
     cur_seqs.erase(std::next(cur_node)->first);
 }
@@ -326,12 +344,12 @@ while (std::next(cur_node) != cur_seqs.end() && std::next(cur_node)->second < cu
     c(v_N^-, v_R) &= \ausmenge(P)\\
     c(v_R, v_N^+) &= -\ausmenge(P)
    \end{align*}
-   \item Für jedes Rechteck $R$
+   \item Für jedes Rechteck $R$:
    \begin{align*}
     c(v_0, v_R) &= 0 \\
     c(v_R, v_0) &= \begin{cases}\breite(0) - \breite(R) \\ \hoehe(0) - \hoehe(R)\end{cases}
    \end{align*}
-   \item Für zwei Rechtecke $A$ und $B$, wobei $A$ links/unterhalb von $B$ liegt
+   \item Für zwei Rechtecke $A$ und $B$, wobei $A$ links/unterhalb von $B$ liegt:
    \begin{align*}
     c(v_A, v_B) = \begin{cases} -\breite(A) \\
     -\hoehe(A)\end{cases}
@@ -380,13 +398,13 @@ bool graph::compute_min_flow()
 \begin{frame}{Packings ennumerieren}
  Alle Sequence Pairs mit Drehungen:
  \begin{enumerate}
-   \item \texttt{std::next\_permutation} auf $X$ und $Y$
-   \item \texttt{rectangle\_iterator} drecht Rechtecke
+   \item \texttt{std::next\_permutation} auf $X$ und $Y$.
+   \item \texttt{rectangle\_iterator} drecht Rechtecke.
  \end{enumerate}
  
- Alle Vertauschungen von $k$ Rechtecken
+ Alle Vertauschungen von $k$ Rechtecken:
  \begin{enumerate}
-   \item $k$-Teilmengen der Rechtecke finden mit \texttt{next\_combination}
+   \item $k$-Teilmengen der Rechtecke finden mit \texttt{next\_combination}.
    \item Teilmenge permutieren mit \texttt{std::next\_permutation} und auf Sequence Pair übertragen. 
    \item \texttt{rectangle\_iterator} dreht Rechtecke.
  \end{enumerate}
